argocd-k8s-jenkins-script/prod-template-object.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-app_name-service
  namespace: main-etranzact-prod
spec:
  selector:
    app: prod-app_name
  type: ClusterIP
  # sessionAffinity: None
  # sessionAffinityConfig:
  #   clientIP:
  #     timeoutSeconds: 10800
  ports:
  - name: app_name
    protocol: TCP
    port: PORTINGO
    targetPort: PORTINGO
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-app_name-deployment
  namespace: main-etranzact-prod
  labels:
    app: prod-app_name
spec:
  minReadySeconds: 15
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: prod-app_name
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: prod-app_name
    spec:
      containers:
      - name: prod-app_name
        image: 842092678711.dkr.ecr.eu-west-1.amazonaws.com/reimage
        imagePullPolicy: Always
        ports:
        - containerPort: PORTINGO
          name: app_name
        volumeMounts:
        - name: prod-app_name-host-logs
          mountPath: /app/logs # Only mounting logs folder ... Change this according to the workdir used in the dockerfile
      restartPolicy: Always
      volumes:
      - name: prod-app_name-host-logs
        hostPath:
          path: /opt/k8s/app_name
          type: DirectoryOrCreate
